--- a/pom.xml
+++ b/pom.xml
@@ -5,5 +5,90 @@
   <version>0.0.1-SNAPSHOT</version>
   <packaging>war</packaging>
   <name>MLL</name>
+  <url>http://maven.apache.org</url>
   <description>MLL</description>
+
+  <properties>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+  </properties>
+
+  <dependencies>
+    <dependency>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
+      <version>3.8.1</version>
+      <scope>test</scope>
+    </dependency>
+   <dependency>
+     
+	<groupId>javax.servlet</groupId>
+	<artifactId>servlet-api</artifactId>
+	<version>2.5</version>
+	<scope>provided</scope>
+  </dependency>
+  
+  <dependency>
+  <groupId>org.hibernate</groupId>
+  <artifactId>hibernate-entitymanager</artifactId>
+  <version>3.5.1-Final</version>
+</dependency>
+
+
+
+<dependency>
+    <groupId>com.vaadin.external.google</groupId>
+    <artifactId>android-json</artifactId>
+    <version>0.0.20131108.vaadin1</version>
+</dependency>
+<dependency>
+	<groupId>org.json</groupId>
+	<artifactId>json</artifactId>
+	<version>20151123</version>
+</dependency>
+
+<dependency>
+	<groupId>com.googlecode.json-simple</groupId>
+	<artifactId>json-simple</artifactId>
+	<version>1.1</version>
+</dependency>
+
+
+  </dependencies>
+  
+   <build>
+ <pluginManagement>
+  <plugins>
+  <plugin>
+  
+ <groupId>org.codehaus.mojo</groupId>
+  <artifactId>exec-maven-plugin</artifactId>
+  
+  <executions>
+	<execution>
+	<phase>generate-sources</phase>
+	<goals>
+
+      <goal>exec</goal>
+
+     </goals>
+
+     </execution>
+
+   </executions>
+
+   <configuration>
+
+     <executable>bower</executable>
+
+     <arguments>
+
+      <argument>install</argument>
+     </arguments>
+   </configuration>
+  </plugin>
+  </plugins>
+  </pluginManagement>
+  </build>
+  
+  
 </project>
