--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,7 @@
 			<version>2.5</version>
 			<scope>provided</scope>
 		</dependency>
-
+		
 		<dependency>
 			<groupId>antlr</groupId>
 			<artifactId>antlr</artifactId>
@@ -135,6 +135,18 @@
 			<groupId>asm</groupId>
 			<artifactId>asm-all</artifactId>
 			<version>2.2</version>
+		</dependency>
+		
+		<dependency>
+			<groupId>commons-fileupload</groupId>
+			<artifactId>commons-fileupload</artifactId>
+			<version>1.3.1</version>
+		</dependency>
+		
+		<dependency>
+			<groupId>commons-io</groupId>
+			<artifactId>commons-io</artifactId>
+			<version>2.4</version>
 		</dependency>
 		
 	</dependencies>
