--- a/pom.xml
+++ b/pom.xml
@@ -150,8 +150,8 @@
 		</dependency>
 
 		<dependency>
-			<groupId>javax.mail</groupId>
-			<artifactId>javax.mail-api</artifactId>
+			<groupId>com.sun.mail</groupId>
+			<artifactId>javax.mail</artifactId>
 			<version>1.5.1</version>
 		</dependency>
 
